[Fix] bg_modal, modal_wrap, sec2 js 수정
common css bg_modal에 z-index:9999추가

--- a/css/common.css
+++ b/css/common.css
@@ -108,6 +108,7 @@ div[class^=bg_]{
   right: 0;
   bottom: 0;
   top: 0;
+  z-index: 9999;
 }
 
 
